# crunch

./: .gitignore  CMakeLists.txt  crn.2010.sln
.github/workflows/: build.yml  cmake-multi-platform.yml
crnlib/: crn_console.cpp  crn_data_stream.h  crn_image.h  crn_ktx_texture.h  crn_platform.h  crn_threading_win32.cpp  crn_utils.h  crn_vector.cpp  crnlib.2010.vcxproj  crnlib.2010.vcxproj.filters  crnlib.cpp  dll_exports.h  pthread_spin_lock_shim.h
crunch/: crunch.2010.vcxproj
example1/: example1.2010.vcxproj
example2/: example2.2010.vcxproj
example3/: example3.2010.vcxproj
inc/: crn_decomp.h  crn_defs.h  crnlib.h
jni/: Android.mk  Makefile.srcs
